http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_imgui",
    url = "https://github.com/ocornut/imgui/archive/refs/tags/v1.89.8.zip",
    strip_prefix = "imgui-1.89.8",
    build_file = "@//third_party:BUILD.imgui",
    sha256 = "16b9d46385fb38340691c4dce7cf4547b161866f9c85fa588293df27e1667bfd",
)

http_archive(
    name = "glfw_src",
    url = "https://github.com/glfw/glfw/releases/download/3.3.8/glfw-3.3.8.zip",
    strip_prefix = "glfw-3.3.8",
    build_file = "//third_party:BUILD.glfw_src",
    sha256 = "4d025083cc4a3dd1f91ab9b9ba4f5807193823e565a5bcf4be202669d9911ea6",
)

bazel_dep(
    name = "apple_support",
    version = "1.22.1",
    repo_name = "build_bazel_apple_support",
)

bazel_dep(
    name = "platforms",
    version = "0.0.11",
)

bazel_dep(
    name = "portaudio",
    version = "19.7.0.bcr.3",
)
